# soteria-safety-systems

./: README.md
CameraModule/: CMakeLists.txt
CameraModule/include/: bt_transmitter.hpp  depth_stream_visualizer.hpp  frame_processor.hpp
CameraModule/src/: bs_detector.cpp  bt_transmitter.cpp  depth_stream_visualizer.cpp  frame_processor.cpp  init_constants.hpp
EmergencyServicesModule/: GPSandAccelerometer.ino
LEDModule/: LED_bluetooth_control.ino
